--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,7 +62,7 @@
             museum, monumen ini juga memiliki fasilitas lain seperti perpustakaan, kolam ikan, dan pameran kerajinan tangan.</p>
     </string>
     <string name="museum_bali">
-        <b>Museum Bali</b>
+        <b>Museum Bali \n\n</b>
         <p>Museum yang terletak di Denpasar ini berupa bangunan gedung tua, tepatnya bersebelahan dengan Pura Agung Jagat Natha. Dari bandara, Anda ikuti saja jalan menuju
             pusat kota dengan waktu tempuh sekitar 45 menit. Karena memasuki wilayah yang cukup padat kendaraan, kendaraan roda dua adalah pilihan terbaik. Museum hanya buka
             hari Minggu sampai Jumat. Untuk hari Minggu-Kamis, Anda dapat berkunjung pada pukul 08.00-15.00 WITA, dan untuk hari Jumat pada pukul 08.00-12.30 WITA. Museum
@@ -72,13 +72,13 @@
             perkembangan seni dan budaa masyarakat Bali dari zaman ke zaman. Melalui museum ini, Anda akan dapat lebih mengenal budaya Bali pada setiap zaman.</p>
     </string>
     <string name="pantai_double_six">
-        <b>Pantai Double Six</b>
+        <b>Pantai Double Six \n\n</b>
         <p>Nama pantai ini diambil dari sebuah nama diskotek bernama serupa yang lokasinya berada di seberang pantai. Kegiatan yang dapat dilakukan di pantai ini sama seperti
             kegiatan di pantai lainnya. Hanya saja yang menarik dan menjadikan Pantai Double Six menjadi sedikit berbeda dari lainnya adalah sofa warna-warni di bawah payung
             yang sama warna-warninya. Tidak sedikit anak muda yang menghabiskan waktu mereka di sini untuk sekadar menikmati matahari tenggelam.</p>
     </string>
     <string name="pura_besakih">
-        <b>Pura Besaikh</b>
+        <b>Pura Besaikh \n\n</b>
         <p>Pura Besakih merupakan pura terbesar umat Hindu yang ada di Bali. Pura ini merupakan sebuah kompleks pura, terletak di Desa Besakih, Kecamatan Rendang, Kabupaten
             Karangasem. Kompleks ini terdiri atas satu pura pusat, yakni Pura Penataran Agung Besakih, dan 18 pura pendamping yang terdiri atas satu Pura Basukian dan 17 pura
             lainnya. Secara umum, Pura Besakih menjadi pusat kegiatan seluruh pura yang ada di tanah Bali. \n\n</p>
@@ -86,10 +86,10 @@
             masyarakat sebagai tempat bersemayamnya arwah para leluhur dan para dewa utusan Sang Hyang Widhi. Untuk itulah, masyarakat mendirikan sebuah bangunan suci tepat di
             kaki Gunung Agung sebagai tempat memuja para dewa. Pura ini telah ada sejak tahun 1007 Masehi dan tercatat sebagai warisan budaya UNESCO pada tahun 1995. \n\n</p>
         <p>Pastikan Anda berpakaian sopan saat mengunjungi tempat suci ini. Perempuan yang sedang haid tidak diperkenankan untuk masuk. Pura ini terbuka untuk umum setiap hari
-            pukul 09.00-17.00 WITA. Pengunjung hanya dikenakan biaya Rp15.000,00 untuk tiket masuk dan Rp2.000,00-Rp3.000,00 untuk parkir. \n\n</p>
+            pukul 09.00-17.00 WITA. Pengunjung hanya dikenakan biaya Rp15.000,00 untuk tiket masuk dan Rp2.000,00-Rp3.000,00 untuk parkir.</p>
     </string>
     <string name="pura_tirta_empul">
-        <b>Pura Tirta Empul</b>
+        <b>Pura Tirta Empul \n\n</b>
         <p>Yang menjadi daya tarik Pura Tirta Empul adalah adanya pemandian yang dianggap suci bagi umat Hindu. Kolam persegi panjang dengan 30 pancuran yang berjejer dari timur
             ke barat inilah yang banyak menarik wisatawan. Anda boleh turut masuk ke dalam kolam dan ikut menyucikan diri di sini, namun dengan syarat Anda harus mengenakan kamen.
             Kamen adalah sebutan untuk kain yang diikatkan di pinggang. \n\n</p>
@@ -99,7 +99,7 @@
             tidak perlu takut tersesat karena ada banyak papan penunjuk jalan yang mengarahkan Anda menuju ke sana.</p>
     </string>
     <string name="gunung_agung">
-        <b>Gunung Agung</b>
+        <b>Gunung Agung \n\n</b>
         <p>Puncak tertinggi Bali ada di puncak Gunung Agung, gunung yang sangat disucikan umat Hindu Bali. Menurut kepercayaan masyarakat, Gunung Agung merupakan tempat para dewa
             yang senantiasa mengawasi manusia. Dan di lereng gunung inilah pura terbesar di Bali, Pura Besakih, berada. \n\n</p>
         <p>Anda tidak dapat mendaki gunung ini tanpa pemandu. Alasannya tidak lain adalah untuk menekan angka kecelakaan dan menjaga kesucian Gunung Agung. Biaya jasa untuk seorang
